syntax = "proto3";

package ensembl_metadata;

// IMPORTANT: the directory structure of the protos directory should mirror the structure of the src directory to avoid
// Python import errors.

// Metadata for the genomes in Ensembl.
service EnsemblMetadata {
  // Retrieve genome by its UUID.
  rpc GetGenomeByUUID(GenomeUUIDRequest) returns (Genome) {}

  // Retrieve genomes by keyword search
  rpc GetGenomesByKeyword(GenomeByKeywordRequest) returns (stream Genome) {}

  // Get species information for a genome UUID
  rpc GetSpeciesInformation(GenomeUUIDRequest) returns (Species) {}

  // Get assembly information
  rpc GetAssemblyInformation(AssemblyIDRequest) returns (AssemblyInfo) {}

  // Get subspecies information
  rpc GetSubSpeciesInformation(OrganismIDRequest) returns (SubSpecies) {}

  // Get grouping information
  rpc GetGroupingInformation(OrganismIDRequest) returns (Grouping) {}

  // Get karyotype information
  rpc GetKaryotypeInformation(GenomeUUIDRequest) returns (Karyotype) {}

  // Get top level statistics
  rpc GetTopLevelStatistics(OrganismIDRequest) returns (TopLevelStatistics) {}

  // Retrieve genome by Ensembl name and site, and optionally release.
  rpc GetGenomeByName(GenomeNameRequest) returns (Genome) {}

  // Retrieve release details.
  rpc GetRelease(ReleaseRequest) returns (stream Release) {}

  // Retrieve release details for a genome.
  rpc GetReleaseByUUID(GenomeUUIDRequest) returns (stream Release) {}

  // Retrieve sequence metadata for a genome's assembly.
  rpc GetGenomeSequence(GenomeSequenceRequest) returns (stream GenomeSequence) {}

  // Retrieve dataset info by genome uuid and dataset_type
  rpc GetDatasetInformation(GenomeDatatypeRequest) returns (DatasetInfos) {}
}

/*
A genome is a collection of datasets for an assembly,
which may or may not be in the current Ensembl release.
 */
message Genome {
  string genome_uuid = 1;
  Assembly assembly = 2;
  Taxon taxon = 3;
  string created = 4;
  Organism organism = 5;
  Release release = 6;
}

message Karyotype {
   string code = 1;
   string chromosomal = 2;
   string location = 3;
   string genome_uuid = 4;
}

message Species {
  string genome_uuid = 1;
  string common_name = 2;
  string ncbi_common_name = 4;
  uint32 taxon_id = 5;
  string scientific_name = 6;
  repeated string alternative_names = 7;
  string scientific_parlance_name = 8;
}

message AssemblyInfo {
  string assembly_id = 1;
  string accession = 2;
  string level = 3;
  string name = 4;
  uint32 chromosomal = 5;
  uint32 length = 6;
  string sequence_location = 7;
  string sequence_checksum = 8;
  string ga4gh_identifier = 9;
}

message SubSpecies {
  string organism_id = 1;
  repeated string species_type = 2;
  repeated string species_name = 3;
}

message Grouping {
  string organism_id = 1;
  repeated string species_type = 2;
  repeated string species_name = 3;
}

message TopLevelStatistics {
  string organism_id = 1;
  message AttributeStatistics {
    string name = 2;
    string label = 3;
    string statistic_type = 4;
    string statistic_value = 5;
  }
  repeated AttributeStatistics statistics = 2;
}

/*
An INSDC record of a genome assembly.
 */
message Assembly {
  string accession = 1;
  string name = 2;
  string ucsc_name = 3;
  string level = 4;
}

/*
Taxonomic information derived from the NCBI Taxonomy.
 */
message Taxon {
  uint32 taxonomy_id = 1;
  string scientific_name = 2;
  string strain = 3;
  repeated string common_name = 4;
}

/*
Release details for all Ensembl sites.
 */
message Release {
  double release_version = 1;
  string release_date = 2;
  string release_label = 3;
  bool is_current = 4;
  string site_name = 5;
  string site_label = 6;
  string site_uri = 7;
}

message Organism {
  string display_name = 1;
  string strain = 2;
  string scientific_name = 3;
  string url_name = 4;
  string ensembl_name = 5;
  string scientific_parlance_name = 6;
}

/*
Wrapper for a list of DatasetInfo objects
*/
message DatasetInfos {
  string genome_uuid = 1;
  string dataset_type = 2;
  /*
  Details for datasets
  */
  message DatasetInfo {
    string dataset_uuid = 1;
    string dataset_name = 2;
    string name = 3;
    string type = 4;
    string dataset_version = 5;
    string dataset_label = 6;
    double version = 7;
    string value = 8;
  }
  repeated DatasetInfo dataset_infos = 3;
}

/*
Metadata about the sequences that comprise a genome's assembly.
 */
message GenomeSequence {
  string accession = 1;
  string name = 2;
  string sequence_location = 3;
  uint32 length = 4;
  bool chromosomal = 5;
}

/*
The messages below are used to request data - required-ness is not enforced
by protocol buffers, but in practice some fields are mandatory in order to
receive a non-empty response, so this is indicated with a comment.
 */

/*
Genome UUID filter.
If release_version is not given, the current version is used.
 */
message GenomeUUIDRequest {
  string genome_uuid = 1; // Mandatory
  double release_version = 2; // Optional
}

/*
Genome keyword filter.
If release_version is not given, the current version is used.
 */
message GenomeByKeywordRequest {
  string keyword = 1; // Mandatory
  double release_version = 2; // Optional
}

/*
Genome name filter.
If release_version is not given, the current version is used.
 */
message GenomeNameRequest {
  string ensembl_name = 1;    // Mandatory
  string site_name = 2;       // Mandatory
  double release_version = 3; // Optional
}

/*
Assembly ID filter
 */
message AssemblyIDRequest {
  string assembly_id = 1; // Mandatory
}

message OrganismIDRequest {
  string organism_id = 1;
}

/*
Release filter.
An empty message will return all releases, for all sites.
 */
message ReleaseRequest {
  repeated string site_name = 1;        // Optional
  repeated double release_version = 2;  // Optional
  bool current_only = 3;                // Optional
}

/*
Genome sequence filter.
 */
message GenomeSequenceRequest {
  string genome_uuid = 1;     // Mandatory
  bool chromosomal_only = 2;  // Optional
}

/*
Genome datatype filter
*/
message GenomeDatatypeRequest {
  string genome_uuid = 1;     // Mandatory
  string dataset_type = 2;    // Mandatory
}
